# Pong-SDL-CPP

./: .gitignore  CMakeLists.txt  build.sh  run.sh
docs/: README.md  features_to_add.txt
lib/AudioMixer/: CMakeLists.txt  audio_mixer.cpp  audio_mixer.h
lib/Collider2D/: .collider2d.cpp.swp  .collider2d.h.swp  CMakeLists.txt  collider2d.cpp  collider2d.h
lib/GameEntity/: .game_entity.cpp.swp  .game_entity.h.swp  CMakeLists.txt  game_entity.cpp  game_entity.h
lib/ResourceManager/: .manager.cpp.swp  .manager.h.swp  CMakeLists.txt  manager.cpp  manager.h
lib/SDLAppManager/: CMakeLists.txt  sdl_app_manager.cpp  sdl_app_manager.h
lib/SDLEngine/: CMakeLists.txt  engine.cpp  engine.h
lib/TexturedFonts/: .TEX_font.cpp.swp  .TEX_font.h.swp  CMakeLists.txt  TEX_font.cpp  TEX_font.h
lib/TexturedRectangle/: .TEX_rect.cpp.swp  .TEX_rect.h.swp  CMakeLists.txt  TEX_rect.cpp  TEX_rect.h
src/: .main.cpp.swp  main.cpp  test.cpp
